[gd_scene load_steps=19 format=4 uid="uid://c5t5dxlco73u2"]

[ext_resource type="Texture2D" uid="uid://dyy8p0fy0csjm" path="res://assets/Dungeon_Tileset.png" id="1_l8042"]
[ext_resource type="Script" uid="uid://c1e87wqvl5mfm" path="res://scenes/rooms/room.gd" id="1_xlkwu"]
[ext_resource type="Script" uid="uid://c42uelitngvqy" path="res://scenes/rooms/door.gd" id="3_s7o37"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kxljb"]
texture = ExtResource("1_l8042")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_y1kpu"]
sources/1 = SubResource("TileSetAtlasSource_kxljb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8xru0"]
texture = ExtResource("1_l8042")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_kxljb"]
sources/0 = SubResource("TileSetAtlasSource_8xru0")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y1kpu"]
texture = ExtResource("1_l8042")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_vaubn"]
sources/0 = SubResource("TileSetAtlasSource_y1kpu")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1fuux"]
texture = ExtResource("1_l8042")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_3nht7"]
sources/0 = SubResource("TileSetAtlasSource_1fuux")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xru0"]
size = Vector2(288, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxljb"]
size = Vector2(288, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1kpu"]
size = Vector2(29.5, 162)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1fuux"]
size = Vector2(30, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3nht7"]
size = Vector2(9, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7o37"]
size = Vector2(30, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tmaxl"]
size = Vector2(9, 30)

[node name="Room" type="Node2D"]
script = ExtResource("1_xlkwu")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAACAAIAAQAHAAEAAAACAAMAAQAHAAIAAAACAAQAAQAHAAAAAAADAAIAAQAIAAEAAAADAAMAAQAIAAIAAAADAAQAAQAIAAAAAAAEAAIAAQAJAAEAAAAEAAMAAQAJAAIAAAAEAAQAAQAJAAAAAAAFAAIAAQAGAAEAAAAFAAMAAQAGAAIAAAAFAAQAAQAGAAAAAAAGAAIAAQAHAAEAAAAGAAMAAQAHAAIAAAAGAAQAAQAHAAAAAAAHAAIAAQAIAAEAAAAHAAMAAQAIAAIAAAAHAAQAAQAIAAAAAAAIAAIAAQAJAAEAAAAIAAMAAQAJAAIAAAAIAAQAAQAJAAAAAAAJAAIAAQAGAAEAAAAJAAMAAQAGAAIAAAAJAAQAAQAGAAAAAAAKAAIAAQAHAAEAAAAKAAMAAQAHAAIAAAAKAAQAAQAHAAAAAAALAAIAAQAIAAEAAAALAAMAAQAIAAIAAAALAAQAAQAIAAAAAAAMAAIAAQAJAAEAAAAMAAMAAQAJAAIAAAAMAAQAAQAJAAAAAAANAAIAAQAGAAEAAAANAAMAAQAGAAIAAAANAAQAAQAGAAAAAAAKAAUAAQAHAAEAAAAKAAYAAQAHAAIAAAAKAAcAAQAHAAAAAAALAAUAAQAIAAEAAAALAAYAAQAIAAIAAAALAAcAAQAIAAAAAAAMAAUAAQAJAAEAAAAMAAYAAQAJAAIAAAAMAAcAAQAJAAAAAAANAAUAAQAGAAEAAAANAAYAAQAGAAIAAAANAAcAAQAGAAAAAAAHAAUAAQAIAAEAAAAIAAUAAQAJAAEAAAAJAAUAAQAGAAEAAAACAAUAAQAHAAEAAAACAAYAAQAHAAIAAAACAAcAAQAHAAAAAAAOAAIAAQAHAAEAAAAOAAMAAQAHAAIAAAAOAAQAAQAHAAAAAAAPAAIAAQAIAAEAAAAPAAMAAQAIAAIAAAAPAAQAAQAIAAAAAAAOAAUAAQAHAAEAAAAOAAYAAQAHAAIAAAAOAAcAAQAHAAAAAAAPAAUAAQAIAAEAAAAPAAYAAQAIAAIAAAAPAAcAAQAIAAAAAAAQAAIAAQAJAAEAAAAQAAMAAQAJAAIAAAAQAAQAAQAIAAcAAAAQAAUAAQAIAAcAAAAQAAYAAQAJAAIAAAAQAAgAAQAJAAEAAAAPAAgAAQAIAAEAAAADAAgAAQAIAAEAAAABAAgAAQAGAAEAAAACAAgAAQAHAAEAAAAJAAgAAQAGAAEAAAAKAAgAAQAHAAEAAAALAAgAAQAIAAEAAAAMAAgAAQAJAAEAAAANAAgAAQAGAAEAAAAOAAgAAQAHAAEAAAAQAAcAAQAJAAAAAAAPAAEAAQAIAAAAAAAOAAEAAQAHAAAAAAANAAEAAQAGAAAAAAAMAAEAAQAJAAAAAAALAAEAAQAIAAAAAAAKAAEAAQAHAAAAAAAJAAEAAQAGAAAAAAAIAAEAAQAJAAAAAAAHAAEAAQAIAAAAAAAGAAEAAQAHAAAAAAAFAAEAAQAGAAAAAAAEAAEAAQAJAAAAAAADAAEAAQAIAAAAAAACAAEAAQAHAAAAAAABAAEAAQAGAAAAAAABAAIAAQAGAAEAAAABAAMAAQAGAAIAAAABAAQAAQAIAAcAAAABAAUAAQAIAAcAAAABAAYAAQAGAAIAAAABAAcAAQAGAAAAAAAQAAEAAQAJAAAAAAAAAAAAAQAIAAcAAAABAAAAAQAIAAcAAAACAAAAAQAIAAcAAAADAAAAAQAIAAcAAAAEAAAAAQAIAAcAAAAFAAAAAQAIAAcAAAAGAAAAAQAIAAcAAAAHAAAAAQAIAAcAAAAIAAAAAQAIAAcAAAAJAAAAAQAIAAcAAAAKAAAAAQAIAAcAAAALAAAAAQAIAAcAAAAMAAAAAQAIAAcAAAANAAAAAQAIAAcAAAAOAAAAAQAIAAcAAAAPAAAAAQAIAAcAAAAQAAAAAQAIAAcAAAARAAAAAQAIAAcAAAARAAEAAQAIAAcAAAARAAIAAQAIAAcAAAARAAMAAQAIAAcAAAARAAQAAQAIAAcAAAARAAUAAQAIAAcAAAARAAYAAQAIAAcAAAARAAcAAQAIAAcAAAARAAgAAQAIAAcAAAARAAkAAQAIAAcAAAAAAAEAAQAIAAcAAAAAAAIAAQAIAAcAAAAAAAMAAQAIAAcAAAAAAAQAAQAIAAcAAAAAAAUAAQAIAAcAAAAAAAYAAQAIAAcAAAAAAAcAAQAIAAcAAAAAAAgAAQAIAAcAAAAAAAkAAQAIAAcAAAABAAkAAQAIAAcAAAACAAkAAQAIAAcAAAADAAkAAQAIAAcAAAAEAAkAAQAIAAcAAAAFAAkAAQAIAAcAAAAGAAkAAQAIAAcAAAAHAAkAAQAIAAcAAAAKAAkAAQAIAAcAAAALAAkAAQAIAAcAAAAMAAkAAQAIAAcAAAANAAkAAQAIAAcAAAAOAAkAAQAIAAcAAAAPAAkAAQAIAAcAAAAQAAkAAQAIAAcAAAADAAUAAQAIAAEAAAADAAYAAQAIAAIAAAADAAcAAQAIAAAAAAAEAAUAAQAJAAEAAAAFAAUAAQAGAAEAAAAGAAUAAQAHAAEAAAAGAAgAAQAHAAEAAAAHAAgAAQAIAAEAAAAFAAgAAQAGAAEAAAAGAAcAAQAHAAAAAAAFAAcAAQAGAAAAAAAEAAcAAQAJAAAAAAAEAAgAAQAJAAEAAAAIAAgAAQAJAAEAAAAIAAcAAQAJAAAAAAAHAAcAAQAIAAAAAAAJAAcAAQAGAAAAAAAJAAYAAQAGAAIAAAAIAAYAAQAJAAIAAAAHAAYAAQAIAAIAAAAGAAYAAQAHAAIAAAAFAAYAAQAGAAIAAAAEAAYAAQAJAAIAAAAIAAkAAQAIAAcAAAAJAAkAAQAIAAcAAAA=")
tile_set = SubResource("TileSet_y1kpu")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQAAcAAAAFAAIAAAAQAAEAAAAFAAEAAAAQAAIAAAAFAAEAAAAQAAMAAAAFAAEAAAAQAAYAAAAFAAEAAAABAAYAAAAAAAEAAAABAAMAAAAAAAEAAAABAAIAAAAAAAEAAAABAAEAAAAAAAEAAAABAAcAAAAAAAAAAAACAAEAAAABAAAAAAADAAEAAAABAAAAAAAEAAEAAAABAAAAAAAFAAEAAAABAAAAAAAGAAEAAAABAAAAAAAHAAEAAAABAAAAAAAKAAEAAAABAAAAAAALAAEAAAABAAAAAAAMAAEAAAABAAAAAAANAAEAAAABAAAAAAAOAAEAAAABAAAAAAAPAAEAAAABAAAAAAA=")
tile_set = SubResource("TileSet_kxljb")

[node name="TileMapLayer3" type="TileMapLayer" parent="."]
z_index = 1
tile_map_data = PackedByteArray("AAACAAgAAAABAAQAAAADAAgAAAABAAQAAAAEAAgAAAABAAQAAAAFAAgAAAABAAQAAAAGAAgAAAABAAQAAAAHAAgAAAABAAQAAAAKAAgAAAABAAQAAAALAAgAAAABAAQAAAAMAAgAAAABAAQAAAANAAgAAAABAAQAAAAOAAgAAAABAAQAAAAPAAgAAAABAAQAAAABAAgAAAAAAAQAAAAQAAgAAAAFAAQAAAA=")
tile_set = SubResource("TileSet_vaubn")

[node name="TileMapLayer4" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_3nht7")

[node name="Area2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(144, 10)
shape = SubResource("RectangleShape2D_8xru0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(144, 148)
shape = SubResource("RectangleShape2D_kxljb")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Area2D"]
position = Vector2(14.5, 81)
shape = SubResource("RectangleShape2D_y1kpu")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Area2D"]
position = Vector2(273.25, 81)
shape = SubResource("RectangleShape2D_y1kpu")

[node name="Doors" type="Node2D" parent="."]

[node name="TopDoor" type="Area2D" parent="Doors"]
script = ExtResource("3_s7o37")
metadata/_custom_type_script = "uid://c42uelitngvqy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/TopDoor"]
position = Vector2(144, 17)
shape = SubResource("RectangleShape2D_1fuux")

[node name="LeftDoor" type="Area2D" parent="Doors"]
script = ExtResource("3_s7o37")
metadata/_custom_type_script = "uid://c42uelitngvqy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/LeftDoor"]
position = Vector2(29.5, 80)
shape = SubResource("RectangleShape2D_3nht7")

[node name="BottomDoor" type="Area2D" parent="Doors"]
script = ExtResource("3_s7o37")
metadata/_custom_type_script = "uid://c42uelitngvqy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/BottomDoor"]
position = Vector2(144, 137)
shape = SubResource("RectangleShape2D_s7o37")

[node name="RightDoor" type="Area2D" parent="Doors"]
script = ExtResource("3_s7o37")
metadata/_custom_type_script = "uid://c42uelitngvqy"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Doors/RightDoor"]
position = Vector2(259, 80)
shape = SubResource("RectangleShape2D_tmaxl")
